# opencomplai

./: .gitattributes  .gitignore  .ocignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vercelignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS-UPDATE-PLAN.md  README.md  SECURITY.md  conftest.py  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-docs.txt
.github/: dependabot.yml  pull_request_template.md
docs/: mkdocs.yml
examples/: eval_set.json
scripts/: README.md  assemble.sh  generate_principle_docs.py  oss-config.sh  sync-oss.sh  sync-report.sh  verify-oss.sh
services/evidence-vault/: alembic.ini  pyproject.toml
services/evidence-vault/migrations/: env.py
services/evidence-vault/migrations/versions/: 0001_initial_schema.py  0002_add_dossier_index.py  0003_add_ledger_seq.py
services/evidence-vault/src/opencomplai_evidence_vault/: badges.py  bias_alerts.py  cas.py  ledger.py  main.py  models.py
services/evidence-vault/tests/: test_badges.py  test_bias_alerts.py  test_cas.py  test_dossier_index.py  test_health.py  test_ledger.py  test_ledger_root_endpoint.py
services/risk-engine/: pyproject.toml
services/risk-engine/src/opencomplai_risk_engine/: checker_routes.py  mailer.py  main.py  review_queue.py
services/risk-engine/tests/: test_checker_routes.py  test_discrepancy_enqueue.py  test_evals_endpoint.py  test_health.py  test_hitl.py  test_hitl_fail_closed.py  test_review_queue.py  test_risk_engine.py
sync/: benchmark-ttfs.sh  bootstrap.sh  build-docs.ps1  build-docs.sh  (+9 more)
(+189 files in other folders)
