[project]
name = "opencomplai-evidence-vault"
version = "0.1.0-dev"
description = "Opencomplai evidence-vault service"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
dependencies = [
    "opencomplai-core>=0.1.0-dev",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9",
    "cryptography>=42.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-prometheus>=0.43b0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.26.0", "ruff>=0.1.0", "anyio", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
