[project]
name = "opencomplai-risk-engine"
version = "0.1.0-dev"
description = "Opencomplai risk-engine service"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
dependencies = [
    "opencomplai-core>=0.1.0-dev",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-prometheus>=0.43b0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.26.0", "ruff>=0.1.0", "anyio", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
